force-app/main/default/objects/TwilioSF__Twilio_Personal_Number__c/TwilioSF__Twilio_Personal_Number__c.object-meta.xml
<CustomObject>
    <label>Twilio Personal Number</label>
    <nameField>
        <displayFormat>PN-{0000000}</displayFormat>
        <label>Twilio Personal Number Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Twilio Personal Numbers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>