force-app/main/default/objects/TwilioSF__Twilio_Personal_Number__c/fields/TwilioSF__Friendly_Name__c.field-meta.xml
<CustomField>
    <fullName>TwilioSF__Friendly_Name__c</fullName>
    <label>Friendly Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>