force-app/main/default/objects/TwilioSF__Twilio_Personal_Number__c/fields/TwilioSF__Personal_Number__c.field-meta.xml
<CustomField>
    <fullName>TwilioSF__Personal_Number__c</fullName>
    <externalId>true</externalId>
    <label>Personal Number</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>