force-app/main/default/objects/TwilioSF__Twilio_Personal_Number__c/fields/TwilioSF__SID__c.field-meta.xml
<CustomField>
    <fullName>TwilioSF__SID__c</fullName>
    <externalId>true</externalId>
    <label>SID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>