force-app/main/default/objects/TwilioSF__Twilio_Personal_Number__c/listViews/TwilioSF__All.listView-meta.xml
<ListView>
    <fullName>TwilioSF__All</fullName>
    <columns>NAME</columns>
    <columns>TwilioSF__Personal_Number__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>